WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184098
NetworkLoadChecker should upgrade redirects if needed
https://bugs.webkit.org/show_bug.cgi?id=184098
Summary
NetworkLoadChecker should upgrade redirects if needed
youenn fablet
Reported
2018-03-28 10:58:17 PDT
NetworkLoadChecker should upgrade redirects if needed
Attachments
Patch
(21.51 KB, patch)
2018-03-28 11:05 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Fixing WPT lint
(20.11 KB, patch)
2018-03-28 14:14 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(14.03 KB, patch)
2018-03-30 12:59 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-03-28 11:05:39 PDT
Created
attachment 336678
[details]
Patch
youenn fablet
Comment 2
2018-03-28 14:14:50 PDT
Created
attachment 336718
[details]
Fixing WPT lint
youenn fablet
Comment 3
2018-03-30 12:59:30 PDT
Created
attachment 336880
[details]
Patch
WebKit Commit Bot
Comment 4
2018-03-30 14:50:07 PDT
Comment on
attachment 336880
[details]
Patch Clearing flags on attachment: 336880 Committed
r230118
: <
https://trac.webkit.org/changeset/230118
>
WebKit Commit Bot
Comment 5
2018-03-30 14:50:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-03-30 14:51:24 PDT
<
rdar://problem/39053758
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug