NetworkLoadChecker should upgrade redirects if needed https://bugs.webkit.org/show_bug.cgi?id=184098

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/beacon/resources/beacon-preflight.py: Added.
* web-platform-tests/beacon/resources/redirect.py: Added.
* web-platform-tests/beacon/resources/upgrade-iframe.html: Added.
* web-platform-tests/beacon/resources/upgrade-redirect-iframe.html: Added.
* web-platform-tests/beacon/upgrade-beacon.https-expected.txt: Added.
* web-platform-tests/beacon/upgrade-beacon.https.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/beacon/upgrade-beacon.https.html

* page/csp/ContentSecurityPolicy.h:

Source/WebKit:

In case of redirections, upgrade URL according CSP.

* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::checkRequest):
(WebKit::NetworkLoadChecker::contentSecurityPolicy const):


Canonical link: https://commits.webkit.org/199744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230118 268f45cc-cd09-0410-ab3c-d52691b4dbfc